--- a/content/kz.html
+++ b/content/kz.html
@@ -1,5 +1,7 @@
 <!DOCTYPE  html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>file_1702764941696</title><style type="text/css"> * {margin:0; padding:0; text-indent:0; }
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>file_1702764941696</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <style type="text/css"> * {margin:0; padding:0; text-indent:0; }
  .s1 { color: #8B0021; font-family:Tahoma, sans-serif; font-style: normal; font-weight: bold; text-decoration: none; font-size: 11pt; }
  .s2 { color: #8B0021; font-family:Arial, sans-serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 10pt; }
  h2 { color: #4D4D4F; font-family:Cambria, serif; font-style: normal; font-weight: bold; text-decoration: none; font-size: 25pt; }
