--- a/content/draft.html
+++ b/content/draft.html
@@ -24,5 +24,15 @@
 <p>Don't get me wrong, I'm grateful to everyone who's donated their time to provide good faith evangelism for the open web. This is not a matter of intent. </p>
 
 <p>Where folks lose me is when we turn the analogy into something aspirational for the open web. Or when we omit the part where contemporary email services are pretty horrible and not &quot;decentralized” under any honest assessment. </p>
+
+<h2>Section</h2>
+
+<p>You may hear Meta executives concede to the difficulties of interoperability. We may even read some in depth posts weighing the pros and cons of solutions. My guess is they'll never harp on what will prove to be the most significant challenge of all, though— moderation. </p>
+
+<h2>Section</h2>
+
+<p>Today, thousands of independent servers or comprise the Fediverse, each with its own user expectation and cultural norms. There is no official governing body with an ability to enact sweeping change. Most Fediverse citizens view this structure as a positive force. Some go so far to suggest that its power in numbers makes the fediverse immune to corporate invasion. </p>
+
+<p>The Fediverse collective is certainly the clearest expression we have of a decentralized web. But what keeps it that way? Is it the continued growth through interpolation of instances? Or is it the people who populate those instances? Perhaps it's both. </p>
 </body>
 </html>
